Wrangle report done

--- a/wrangle_report.html
+++ b/wrangle_report.html
@@ -38,7 +38,7 @@
             <p>The following were the issues that I had to over come.</p>
             <div class="card-deck">
                 <div class="card">
-                    <h4>Gathering</h4>
+                    <h4>Gathering</h4><br/>
                     <ul>
                         <li>
                             Querying the API was bit trouble some as on an average it took 30
@@ -52,7 +52,7 @@
                     </ul>
                 </div>
                 <div class="card">
-                    <h4>Assessing</h4>
+                    <h4>Assessing</h4><br/>
                     <ul>
                         <li>
                             This was easy, it took about an hour or so find falts and criticise
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
                 <div class="card">
-                    <h4>Cleaning</h4>
+                    <h4>Cleaning</h4><br/>
                     <ul>
                         <li>
                             Well, this was the longest of all processes. Properly defining the
