Wrangle report done

--- a/wrangle_report.html
+++ b/wrangle_report.html
@@ -27,8 +27,8 @@
             <div class="card-footer">
                 <p>
                     Personally this project was the longest that I had ever worked on, it
-                    took me like 10 days to finish this, the delays was because of the
-                    application for accessing Twitter.
+                    took me about 10 days to finish this. The delay was because of the
+                    application for security tokens for Twitter API.
                 </p>
             </div>
         </div>
@@ -41,13 +41,13 @@
                     <h4>Gathering</h4><br/>
                     <ul>
                         <li>
-                            Querying the API was bit trouble some as on an average it took 30
-                            mins to fetch data.
+                            Querying the API was bit troublesome as on an average it took about 30
+                            minutes to fetch data.
                         </li>
                         <li>
-                            Querying the API for missing records. I thought that there was
-                            something wrong with my code, so I redid the entire thing, but later
-                            I found that there was nothing wrong with the code.
+                            Querying the API for missing records: I thought that there was
+                            something wrong with my code, so I redid the entire thing, only to find out that the records had been deleted and 
+                            there was nothing wrong with the code.
                         </li>
                     </ul>
                 </div>
@@ -55,12 +55,12 @@
                     <h4>Assessing</h4><br/>
                     <ul>
                         <li>
-                            This was easy, it took about an hour or so find falts and criticise
+                            This was easy, it took about an hour or so find faults and criticise
                             it for all the mess it was in.
                         </li>
                         <li>
-                            Although, assessing the image-predictions.tvs file was a bit
-                            overwhelming as there was nothing wrong in it, until programmatic
+                            Although, assessing the image-predictions.tsv file was a bit
+                            overwhelming as there was nothing wrong in it, until programmatic assessment
                             was done.
                         </li>
                     </ul>
@@ -69,13 +69,13 @@
                     <h4>Cleaning</h4><br/>
                     <ul>
                         <li>
-                            Well, this was the longest of all processes. Properly defining the
-                            cleaning goals initial was tough, but it all got easy after two
+                            Well, this was the longest of all the processes. Defining the
+                            cleaning goals initially was tough, but it all got easy after two
                             attempts.
                         </li>
                         <li>
                             Another challenge that I had to encounter was defining the regular
-                            expressions for extracting name from text, and to find those that 
+                            expressions for extracting name from text, and to find those, that 
                             were missed by regexs'.
                         </li>
                     </ul>
@@ -85,14 +85,13 @@
         <div class="card-footer">
             <h4>Overall Experience</h4>
             <p>
-                Well, this one will teach you to learn the importance of cleaning data
-                before we start building model or performing EDA. Not only cleaning, as
-                well in gathering and assessing.
+                Well, this one will teach you to learn the importance of cleaning, gathering and assessing data
+                before we start building model or performing EDA.
             </p>
             <p>
                 It is strongly recommended that every individual must take a refresher
-                course in python and pandas, after all you get used with R's syntax and
-                it ability to handle undity data with the help from 'tidyverse' package.
+                course in python and pandas, after all you get used to R's syntax and
+                it ability to handle untidy data.
             </p>
         </div>
     </div>
