Wrangle report updated and completed

--- a/wrangle_report.html
+++ b/wrangle_report.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <div class="card-header">Introduction</div>
+            <div class="card-header text-center"><h3>Introduction</h3></div>
             <div class="card-body">
                 <p>
                     This project talks about Data Wrangling that involves three distinct
@@ -33,12 +33,12 @@
             </div>
         </div>
         <br/>
-        <div class="card-header">Challenges</div>
+        <div class="card-header text-center"><h3>Challenges</h3></div>
         <div class="card-body">
             <p>The following were the issues that I had to over come.</p>
             <div class="card-deck">
                 <div class="card">
-                    <h4>Gathering</h4><br/>
+                    <h4 class="text-center">Gathering</h4><br/>
                     <ul>
                         <li>
                             Querying the API was bit troublesome as on an average it took about 30
@@ -52,7 +52,7 @@
                     </ul>
                 </div>
                 <div class="card">
-                    <h4>Assessing</h4><br/>
+                    <h4 class="text-center">Assessing</h4><br/>
                     <ul>
                         <li>
                             This was easy, it took about an hour or so find faults and criticise
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
                 <div class="card">
-                    <h4>Cleaning</h4><br/>
+                    <h4 class="text-center">Cleaning</h4><br/>
                     <ul>
                         <li>
                             Well, this was the longest of all the processes. Defining the
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="card-footer">
-            <h4>Overall Experience</h4>
+            <h3 class="text-center">Overall Experience</h3>
             <p>
                 Well, this one will teach you to learn the importance of cleaning, gathering and assessing data
                 before we start building model or performing EDA.
